# shithead

./: .gitignore  AGENTS.md  README.md  render.yaml  shithead.code-workspace
.githooks/: install.cmd  pre-commit  pre-commit.cmd
.github/workflows/: nightly.yml  server.yml
client_py/: README.md  client.py  pyproject.toml
client_py/shithead/: cli.py  client.py  model.py  request-schema.json  shithead.css  shithead_textual.py  textual_async.py
docs/: architecture.drawio  architecture.md  dev.md  flow-diagram.drawio  gsd.md
server/: README.md  client_py.py  main.py  pyproject.toml  server.py
server/gameplay/: __init__.py  card.py  game.py  gameplay.py  linked_list.py  pile_of_cards.py  player.py  playrequest.py  run.py  set_of_cards.py
server/pyshithead/: __init__.py  card.py  controller.py  dealer.py  debug_presets.py  debug_server.py  errors.py  events.py  game.py  linked_list.py  main.py  pile_of_cards.py  player.py  playrequest.py  set_of_cards.py  view.py
server/pyshithead/models/common/: __init__.py  game_manager.py  request_models.py
server/pyshithead/models/game/: __init__.py  card.py  client_local.py  controller.py  dealer.py  errors.py  events.py  events_and_states.py  game.py  game_manager.py  linked_list.py  pile_of_cards.py  player.py  playrequest.py  set_of_cards.py  view.py
server/pyshithead/models/session/: __init__.py  manager.py  models.py  store.py
server/pyshithead/models/web/: __init__.py  all.py  client.py  client_manager.py  errors.py  game_table.py  game_tables_manager.py
server/pyshithead/static/: app.js  index.html  manifest.webmanifest  public.css  styles.css  sw.js
server/pyshithead/static/frontend/: game_ui_controller.js  gameplay_ui_state.js  session_controller.js  state.js  transport.js
server/pyshithead/static/frontend/view/: gameplay_screen.js  root.js
server/pyshithead/stats_ui/: index.html  stats.js  styles.css
server/tests/: conftest.py  test_alpha_api.py  test_card.py  test_dealer.py  test_debug_presets.py  test_events.py  test_game.py  test_game_table.py  test_linked_list.py  test_main.py  test_pileofcards.py  test_player.py  test_playrequest.py  test_setofcards.py  test_stats_ui.py
server/tests/models_game/: conftest.py  test_card.py  test_dealer.py  test_events.py  test_fast_api_websockets.py  test_game.py  test_linked_list.py  test_pileofcards.py  test_player.py  test_playrequest.py  test_setofcards.py
server/tests_browser/: conftest.py  test_browser_smoke.py  test_debug_presets.py
work/: INDEX.md  STATE.md
work/bugs/: BUG-001-hidden-revealed-seven-broken-state.md  BUG-TEMPLATE.md
work/initiatives/: INIT-001-shoutouts-sticker-feature.md  INIT-TEMPLATE.md
