[tool.poetry]
name = "pyshithead"
version = "0.1.0"
description = ""
authors = ["Johannes Gutekunst <john@doe.com>"]
readme = "README.md"
packages = [{ include = "pyshithead" }]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10"
isort = "^5.10"
mypy = "^0.991"
pylint = "^2.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
line_length = 100


[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests", "pyshithead"]
